[gd_scene load_steps=17 format=3 uid="uid://brfg48m3bt86v"]

[ext_resource type="Script" path="res://assets/characters/models/playermodel_01/scripts/Player.gd" id="1_s0dba"]
[ext_resource type="Texture2D" uid="uid://c4x4pvxyh7e5u" path="res://assets/characters/models/playermodel_01/graphics/playermodel_placeholder.png" id="2_2y8mo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0t7ri"]
atlas = ExtResource("2_2y8mo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cysl"]
atlas = ExtResource("2_2y8mo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd4hr"]
atlas = ExtResource("2_2y8mo")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0xhw"]
atlas = ExtResource("2_2y8mo")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpp5y"]
atlas = ExtResource("2_2y8mo")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxo6m"]
atlas = ExtResource("2_2y8mo")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp2ji"]
atlas = ExtResource("2_2y8mo")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xlon"]
atlas = ExtResource("2_2y8mo")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4g17"]
atlas = ExtResource("2_2y8mo")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwoqw"]
atlas = ExtResource("2_2y8mo")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgvn8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t7ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cysl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd4hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0xhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpp5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxo6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp2ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xlon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4g17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwoqw")
}],
"loop": true,
"name": &"Run_right",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jbc04"]
radius = 5.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gpai"]
radius = 5.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5h18i"]
size = Vector2(11, 26)

[node name="Player" type="CharacterBody2D"]
collision_layer = 512
script = ExtResource("1_s0dba")

[node name="Graphics" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hgvn8")
animation = &"Idle"
autoplay = "Idle"

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_jbc04")

[node name="bulletSpawnPoint" type="Marker2D" parent="."]

[node name="LadderCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderCheck"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_4gpai")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_5h18i")

[connection signal="body_entered" from="LadderCheck" to="." method="_on_ladder_check_body_entered"]
[connection signal="body_exited" from="LadderCheck" to="." method="_on_ladder_check_body_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
